# arm-semihosting

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: arm-semihosting.cmake  qemu-system-arm.cmake
inc/: fcvtf.h  monitor_handles.h
src/: fcvtf.c  monitor_handles.c
